src/test/ui/associated-types/issue-72806.stderr
error[E0271]: type mismatch resolving `<Foo2 as Bar2>::Ok == char`
  --> $DIR/issue-72806.rs:14:5
   |
LL |     type Sibling: Bar2<Ok=char>;
   |                        ------- required by this bound in `Bar::Sibling`
...
LL |     type Sibling = Foo2;
   |     ^^^^^^^^^^^^^^^^^^^^ expected `char`, found `u32`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0271`.
